Adding python installation for ppc64le support

--- a/.travis.yml
+++ b/.travis.yml
@@ -190,6 +190,11 @@ matrix:
           env: DOWNSTREAM=pyopenssl
           arch: ppc64le
 
+before_install:
+  - |
+    if [[ "${TRAVIS_CPU_ARCH}" == "ppc64le" ]]; then
+        apt-get install -y python
+    fi
 install:
     - ./.travis/install.sh
 
